--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,7 +3,12 @@
 @import lib/sprite
 @import lib/object-fit-polyfill
 @import generated/sprite-svg
-@import lib/fontello
+$fa-font-path: "./webfonts"
+@import ../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome
+@import ../../node_modules/@fortawesome/fontawesome-free/scss/regular
+@import ../../node_modules/@fortawesome/fontawesome-free/scss/brands
+@import ../../node_modules/@fortawesome/fontawesome-free/scss/solid
+@import ../../node_modules/@fortawesome/fontawesome-free/scss/v4-shims
 
 @import vars
 @import common
