--- a/src/templates/analytics.njk
+++ b/src/templates/analytics.njk
@@ -1,5 +1,5 @@
 ---
-title: Main
+title: Analytics
 ---
 
 {% extends "./layouts/_layout.njk" %}
@@ -206,7 +206,7 @@ title: Main
         </h2>
         <div class="flex">
           {% for icon in icons %}
-             <div class="icon icon-{{icon.number}}">
+            <div class="icon icon-{{icon.number}}">
               <p>{{icon.text}}</p>
             </div>
           {% endfor %}
