--- a/src/templates/partials/_header.njk
+++ b/src/templates/partials/_header.njk
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="container flex">
 	  <div class="header__menu">
-	 		<i class="icon-menu bars"></i>
+	 		<i class="bars fas fa-bars"></i>
 	  </div>
 		<div class="header__logo">
 			<a href="index.html" class="logo">
@@ -9,7 +9,7 @@
 			</a>
 		</div>
 		<div class="header__envelope">
-			<i class="icon-mail envelope"></i>
+			<i class="envelope far fa-envelope"></i>
 		</div>
 	</div>
 	{% include "./_headerNav.njk" %}
