--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -138,9 +138,7 @@ a
 	cursor: pointer
 	opacity: 0.7
 	z-index: 50
-	transition: opacity 0.4s ease
-	transition: box-shadow 0.4s ease
-	transition: color 0.4s ease
+	transition: all 0.4s ease
 	+r(480)
 		display: none
 	&.active
@@ -149,7 +147,7 @@ a
 		opacity: 1
 		color: $grey
 		box-shadow: none
-
+		
 .main_page
 	padding-top: 50px
 	ul 
