--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -104,12 +104,12 @@
 		+r(768)
 			text-align: center
 			line-height: 19px
-			opacity: 0.5
 		p
 			font-size: 14px
 			font-weight: 500
 			color: #f0f0f0
-		a
+			opacity: 0.5
+		&-phone
 			font-size: 14px
 			font-weight: 500
 			color: #f0f0f0
@@ -125,10 +125,11 @@
 			margin-right: 20px
 			&:last-child
 				margin-right: 0
-			.fa
-				font-size: 21px
-				+r(768)
-					opacity: 0.4
-					&:hover
-						opacity: 1
+		&-fa
+			color: #fff
+			font-size: 21px
+			transition: color 0.3s ease
+			&:hover
+				color: $red
+
 
