--- a/src/sass/_headerContact.sass
+++ b/src/sass/_headerContact.sass
@@ -153,8 +153,8 @@
 	padding-left: 47px
 	font-size: 15px
 	font-weight: 600
+	text-align: center
 	color: #fff
-	line-height: 42px
 	background-color: $red
 	box-sizing: border-box
 	+r(750)
@@ -185,3 +185,7 @@
 		background-color: #f3746f
 		+r(750)
 			left: 15px
+	&__text
+		position: absolute
+		top: 50%
+		transform: translateY(-50%)
