--- a/src/templates/partials/_headerNav.njk
+++ b/src/templates/partials/_headerNav.njk
@@ -1,25 +1,37 @@
+{% set socials = [
+  {"name": "fab fa-facebook-f"},
+  {"name": "fab fa-twitter"},
+  {"name": "fas fa-play"},
+  {"name": "fab fa-instagram"},
+  {"name": "fab fa-linkedin-in"}
+]%}
+
+{% set list = [
+  {"name": "About us"},
+  {"name": "Partnerships"},
+  {"name": "FAQ"},
+  {"name": "Thanks"},
+  {"name": "Privacy"},
+  {"name": "Terms"}
+]%}
+
 <div class="header__overlay olnav">
 	<div class="header__hidden hdnav"></div>
 	<div class="header__nav">
 		<div class="btncloseNav"></div>
-		<nav class="header__nav-list">
+		<nav class="header__list">
 			<ul>
-				<li><a href="#">About us</a></li>
-				<li><a href="#">Partnerships</a></li>
-				<li><a href="#">FAQ</a></li>
-				<li><a href="#">Thanks</a></li>
-				<li><a href="#">Privacy</a></li>
-				<li><a href="#">Terms</a></li>
+				{% for i in list %}
+					<li><a href="#">{{i.name}}</a></li>
+				{% endfor %}
 			</ul>
 		</nav>
-		<div class="header__nav-social">
-			<a href="#"><i class="icon-facebook"></i></a>
-			<a href="#"><i class="icon-twitter"></i></a>
-			<a href="#"><i class="icon-play"></i></a>
-			<a href="#"><i class="icon-instagram"></i></a>
-			<a href="#"><i class="icon-linkedin"></i></a>
+		<div class="header__social">
+			{% for icon in socials %}
+				<a href="#"><i class="header__social-fa {{icon.name}}"></i></a>
+			{% endfor %}
 		</div>
-		<div class="header__nav-contacts">
+		<div class="header__contacts">
 			<p>info@oraworldwides.com</p>    
 			<a href="tel:+351211306637">351 211 306 637</a>
 			<p>Schulstrasse 4, 32547 Bad Oyenhausen, GERMANY</p>
