--- a/src/sass/_contact.sass
+++ b/src/sass/_contact.sass
@@ -47,16 +47,15 @@
 						line-height: 23px
 
 .phrase-devices
-	width: 100%
-	height: 672px
+	height: 882px
 	background: url('../img/phrase_devices.png') no-repeat bottom
 	background-size: cover
+	+r(1400)
+		height: 672px
 	+r(992)
 		height: 437px
-		background-image: url('../img/phrase_devices-2.png')
 	+r(480)
 		height: 210px
-		background-image: url('../img/phrase_devices-3.png')
 
 .contact
 	position: relative
