--- a/src/templates/contact.njk
+++ b/src/templates/contact.njk
@@ -27,7 +27,7 @@ title: Contact
             </div>
           </div>
         </div>
-        <div class="phrase-after phrase-contact"></div>
+        <div class="phrase-after phrase-contact" data-phrase></div>
       </div>
     </section>
 
