--- a/src/templates/partials/_footer.njk
+++ b/src/templates/partials/_footer.njk
@@ -15,7 +15,7 @@
   {"name": "Terms"}
 ]%}
 
-<footer class="footer" style="background-image: url('img/bg_footer.png');">
+<footer class="footer" style="background-image: url('img/background.png');">
 	<div class="footer__top">
 		<div class="container flex">
 			<h2 class="h2">
