--- a/src/templates/creative.njk
+++ b/src/templates/creative.njk
@@ -37,19 +37,22 @@ title: Creative
 
    {% set features = [
     {"number": "1",
-     "name": "Marketing &amp; Strategy",
+     "img": "morecol-1.png",
+     "name": "Marketing & Strategy",
      "text1": "We want your digital marketing to be as engaging and relevant as possible.",
      "text2": "It doesn't matter if you're launching a new product or positioning your brand - our strategy remains the same. We conceive. We build. We get results. Simple and with confidence."
     },
     {"number": "2",
+     "img": "morecol-2.png",
      "name": "Social Influence",
      "text1": "Social Media is central to the online customer experience for over 79% of Irish businesses.",
      "text2": "It offers great way to interact with or to gain, an audience. Use it to build brand awareness, create positive sentiment and drive engagement. Not to mention watching some great cat videos and gifs...mow."
     },
     {"number": "3",
+     "img": "morecol-3.png",
      "name": "Search and channel marketing",
      "text1": "Search powers the web. It's the largest provider of traffic there is.",
-     "text2": "The way it works has drastically changed. Our focus on organic SEO &amp; Adwords coupled with content an conversion rate optimisation is at the heart of every strategy we create. We drive relevante traffic to your site and then make sure it converts."
+     "text2": "The way it works has drastically changed. Our focus on organic SEO & Adwords coupled with content an conversion rate optimisation is at the heart of every strategy we create. We drive relevante traffic to your site and then make sure it converts."
     }
   ]%}
 
@@ -58,7 +61,7 @@ title: Creative
   <main>
 
     <section class="banner-3" style="background-image: url('img/background.png');">
-      <div class="banner-3-inner">
+      <div class="banner-3-inner" style="background-image:">
         <div class="container">
           <div class="banner-3-info">
             <p class="p1">
@@ -72,13 +75,18 @@ title: Creative
             </p>
           </div>
           <div class="banner-3-quote">
-            <div class="banner-3-quote-inner">
-              <p>
-                "I used the Unbounce &amp; Mailchimp integration for my signup form. I used to pay my web people $800 to connect a form to MailChimp. You saved me $800!"
-              </p>
-              <h6 class="h6">
-                Joe Glenn, Neofera
-              </h6>  
+            <div class="banner-3-quote__inner flex">
+              <div class="banner-3-quote__image">
+                <img class="banner-3-quote__img" src="img/quote.png" alt="quote">
+              </div>
+              <div class="banner-3-quote-info">
+                <p>
+                  "I used the Unbounce &amp; Mailchimp integration for my signup form. I used to pay my web people $800 to connect a form to MailChimp. You saved me $800!"
+                </p>
+                <h6 class="h6">
+                  Joe Glenn, Neofera
+                </h6>  
+              </div>
             </div> 
           </div>
           <div class="banner-3-partners">
@@ -97,14 +105,14 @@ title: Creative
         <h2 class="h2">
           Try ora worldwide
         </h2>
-        <div class="flex">
+        <div class="phrase__form flex">
           <input type="email" class="input" placeholder="Your email">
           <button class="btn-creative">
             Try it
           </button>
         </div>
       </div>
-      <div class="phrase-after phrase-creative"></div>
+      <div class="phrase-after phrase-creative" data-phrase></div>
     </section>
 
     <section class="conversion">
@@ -115,21 +123,21 @@ title: Creative
         <p>
           Testing lets you find out which messaging your customers relate to best - giving you more insight and opportunity for renenue. A/B testing your campaigns is easy with Unbounce. Simply put your ideas into a new landing page variation, click "publish" and your test is live and collecting real-time data. Now you can let your customers decide what´s best, while you avoid assumptions, and your business benefits from informed decisions. 
         </p>
-        <div class="flex">
-          <div class="conversion-image conversion-red">
-            <img src="img/conversion_red.png" alt="conversion" class="image-1">
+        <div class="conversion__block flex">
+          <div class="conversion__image conversion-red">
+            <img class="conversion__img" src="img/conversion_red.png" alt="conversion">
           </div>
-          <div class="conversion-image conversion-blue">
-            <img src="img/conversion_blue.png" alt="conversion" class="image-2">
+          <div class="conversion__image conversion-blue">
+            <img class="conversion__img" src="img/conversion_blue.png" alt="conversion">
           </div>
-          <div class="conversion-image-text">
+          <div class="conversion__image-text">
             Conversion rate  
           </div>
         </div>
       </div>
     </section>
 
-    <section class="rainbow"  style="background-image: url('img/rainbow_bg.png');">
+    <section class="rainbow" style="background-image: url('img/background.png');">
       <div class="container">
         <div class="flex">
           {% for item in items %}
@@ -151,14 +159,18 @@ title: Creative
 
     <section class="morecolumns">
       <div class="container">
-        <div class="flex">
+        <div class="morecolumns__wrapper flex">
           {% for feature in features %}
             <div class="morecolumns__outer">
-              <div class="morecolumns__inner morecolumns-{{feature.number}}">
-                <img src="img/morecol-{{feature.number}}.png" alt="column-image" class="image image-{{feature.number}}">
-                <h3 class="h3">{{feature.name}}</h3>
-                <p class="p1">{{feature.text1}}</p>
-                <p class="p2">{{feature.text2}}</p>
+              <div class="morecolumns__inner flex">
+                <div class="morecolumns__image">
+                  <img src="img/{{feature.img}}" alt="column-image" class="morecolumns__img">
+                </div>
+                <div class="morecolumns__info flex">
+                  <h3 class="h3">{{feature.name}}</h3>
+                  <p class="p1">{{feature.text1}}</p>
+                  <p class="p2">{{feature.text2}}</p>
+                </div>
               </div>
             </div>
           {% endfor %}
